[FIX] view list: some title not align with other.
bzr revid: chm@openerp.com-20130606104145-jezs2u9tr3xb3fmh

--- a/addons/web/static/src/css/base.sass
+++ b/addons/web/static/src/css/base.sass
@@ -2309,7 +2309,6 @@ $sheet-padding: 16px
         th.oe_sortable div
             position: relative
         th.oe_sortable div:after
-            float: right
             margin-right: 6px
             content: ""
             margin-top: 7px
@@ -2318,11 +2317,13 @@ $sheet-padding: 16px
             border-color: #000 transparent
             visibility: hidden
         th.sortup div:after
+            float: right
             visibility: visible
             @include opacity(0.6)
         .oe_list_header_many2many_tags
             min-width: 70px
         th.sortdown div:after
+            float: right
             border-bottom: none
             border-left: 4px solid transparent
             border-right: 4px solid transparent
